Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="/click-for-love/favicon.ico" type="image/x-icon">
+
     <meta charset="UTF-8" />
     <title>Valentine Alert! 💘</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
