--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             "linear-gradient(135deg, #84fab0, #8fd3f4)",
             "linear-gradient(135deg, #cfd9df, #e2ebf0)",
             "linear-gradient(135deg, #ff9966, #ff5e62)",
-            "linear-gradient(135deg, #7f7fd5, #86a8e7, #91eae4)",
+            "linear-gradient(135deg, #7f7fd5, #86a8e7)",
             "linear-gradient(135deg, #ff6a88, #ff99ac)",
             "linear-gradient(135deg, #36d1dc, #5b86e5)",
             "linear-gradient(135deg, #ffafbd, #ffc3a0)",
