--- a/index.html
+++ b/index.html
@@ -182,6 +182,30 @@
             top: 0;
         }
 
+        .floating-heart {
+            position: fixed;
+            font-size: 20px;
+            color: rgba(255, 77, 109, 0.6);
+            pointer-events: none;
+            z-index: 1;
+            animation: floatFade 6s linear forwards;
+        }
+
+        @keyframes floatFade {
+            0% {
+                opacity: 0;
+                transform: translateY(0) scale(0.5);
+            }
+            20% {
+                opacity: 1;
+                transform: translateY(-20px) scale(1);
+            }
+            100% {
+                opacity: 0;
+                transform: translateY(-150px) scale(0.8);
+            }
+        }
+
         /* Float animation */
         @keyframes floatUp {
             0% {
@@ -217,7 +241,44 @@
             justify-content: center;
             font-family: "Poppins", sans-serif;
             background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+            transition: background 0.8s ease;
+            /* smooth gradient transitions */
             overflow: hidden;
+            position: relative;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            border: 2px solid rgba(255, 77, 109, 0.4);
+            box-shadow: 
+                inset 0 0 15px rgba(255, 77, 109, 0.2),
+                0 0 20px rgba(255, 77, 109, 0.3);
+            pointer-events: none;
+            z-index: 1000;
+            animation: pulseGlow 3s ease-in-out infinite;
+        }
+
+        body::after {
+            content: '';
+            position: fixed;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg, transparent 30%, rgba(255, 255, 255, 0.1) 50%, transparent 70%);
+            pointer-events: none;
+            z-index: 999;
+            animation: moveGlare 8s linear infinite;
+        }
+
+        @keyframes moveGlare {
+            0% { transform: translateX(-100%) translateY(-100%) rotate(45deg); }
+            100% { transform: translateX(100%) translateY(100%) rotate(45deg); }
         }
 
         /* Card */
@@ -355,28 +416,52 @@
 
         /* Backgrounds */
         const backgrounds = [
+            // Pinks & Reds
             "linear-gradient(135deg, #ffdde1, #ee9ca7)",
             "linear-gradient(135deg, #fbc2eb, #a6c1ee)",
             "linear-gradient(135deg, #ffecd2, #fcb69f)",
             "linear-gradient(135deg, #fccb90, #d57eeb)",
-
             "linear-gradient(135deg, #ff9a9e, #fad0c4)",
-            "linear-gradient(135deg, #a18cd1, #fbc2eb)",
             "linear-gradient(135deg, #ff758c, #ff7eb3)",
-            "linear-gradient(135deg, #fdfbfb, #ebedee)",
-            "linear-gradient(135deg, #89f7fe, #66a6ff)",
+            "linear-gradient(135deg, #ff6a88, #ff99ac)",
+            "linear-gradient(135deg, #f64f59, #c471ed)",
+            "linear-gradient(135deg, #ff416c, #ff4b2b)",
+            "linear-gradient(135deg, #ff9966, #ff5e62)",
+            "linear-gradient(135deg, #e53935, #e35d5b)",
+            "linear-gradient(135deg, #ff4e50, #f9d423)",
+            "linear-gradient(135deg, #bc4e9c, #f80759)",
+            "linear-gradient(135deg, #ff758c, #ffb3c1)",
+            "linear-gradient(135deg, #d38312, #a83279)",
+            "linear-gradient(135deg, #ff512f, #dd2476)",
+            "linear-gradient(135deg, #654ea3, #eaafc8)",
+
+            // Blues & Teals
+            "linear-gradient(135deg, #2193b0, #6dd5ed)",
+            "linear-gradient(135deg, #36d1dc, #5b86e5)",
+            "linear-gradient(135deg, #6a11cb, #2575fc)",
+            "linear-gradient(135deg, #8e44ad, #3498db)",
+            "linear-gradient(135deg, #2c3e50, #4ca1af)",
+            "linear-gradient(135deg, #1e3c72, #2a5298)",
+            "linear-gradient(135deg, #0f2027, #203a43, #2c5364)",
+
+            // Dark Purples & Mauves
+            "linear-gradient(135deg, #42275a, #734b6d)",
+
+            // Light & Warm
             "linear-gradient(135deg, #f6d365, #fda085)",
             "linear-gradient(135deg, #84fab0, #8fd3f4)",
-            "linear-gradient(135deg, #cfd9df, #e2ebf0)",
-            "linear-gradient(135deg, #ff9966, #ff5e62)",
-            "linear-gradient(135deg, #7f7fd5, #86a8e7)",
-            "linear-gradient(135deg, #ff6a88, #ff99ac)",
-            "linear-gradient(135deg, #36d1dc, #5b86e5)",
-            "linear-gradient(135deg, #ffafbd, #ffc3a0)",
-            "linear-gradient(135deg, #2193b0, #6dd5ed)",
-            "linear-gradient(135deg, #cc2b5e, #753a88)",
-            "linear-gradient(135deg, #42275a, #734b6d)"
+            "linear-gradient(135deg, #ee9ca7, #ffdde1)",
+
+            // Added new gradients
+            "linear-gradient(135deg, #ff7e5f, #feb47b)",   // coral to peach
+            "linear-gradient(135deg, #6a3093, #a044ff)",   // deep purple to bright violet
+            "linear-gradient(135deg, #0f0c29, #302b63, #24243e)", // night sky dark
+            "linear-gradient(135deg, #f00000, #dc281e)",   // fiery red
+            "linear-gradient(135deg, #3a1c71, #d76d77, #ffaf7b)", // twilight blend
+            "linear-gradient(135deg, #11998e, #38ef7d)",   // teal to green
+            "linear-gradient(135deg, #200122, #6f0000)",   // very dark dramatic
         ];
+
 
 
         function setRandomBackground() {
@@ -644,6 +729,17 @@
         setInterval(() => {
             spawnHeartBurst(6);
         }, 600);
+
+        /* Floating heart icons */
+        setInterval(() => {
+            const heart = document.createElement('div');
+            heart.className = 'floating-heart';
+            heart.innerHTML = '💖';
+            heart.style.left = Math.random() * window.innerWidth + 'px';
+            heart.style.top = window.innerHeight + 'px';
+            document.body.appendChild(heart);
+            setTimeout(() => heart.remove(), 6000);
+        }, 800);
 
         /* Stronger burst when YES is clicked */
         yesBtn.addEventListener("click", () => {
