--- a/index.html
+++ b/index.html
@@ -184,8 +184,10 @@
         .floating-heart {
             position: fixed;
             font-size: 20px;
+            color: rgba(255, 77, 109, 0.6);
             pointer-events: none;
-            animation: floatFade 2s linear forwards;
+            z-index: 1;
+            animation: floatFade 6s linear forwards;
         }
 
         @keyframes floatFade {
@@ -193,12 +195,10 @@
                 opacity: 0;
                 transform: translateY(0) scale(.5)
             }
-
             20% {
                 opacity: 1;
                 transform: translateY(-20px) scale(1)
             }
-
             100% {
                 opacity: 0;
                 transform: translateY(-150px) scale(.8)
@@ -216,6 +216,41 @@
             background: linear-gradient(135deg, #ffdde1, #ee9ca7);
             transition: background .8s ease;
             overflow: hidden;
+            position: relative;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            border: 2px solid rgba(255, 77, 109, 0.4);
+            box-shadow: 
+                inset 0 0 15px rgba(255, 77, 109, 0.2),
+                0 0 20px rgba(255, 77, 109, 0.3);
+            pointer-events: none;
+            z-index: 1000;
+            animation: pulseGlow 3s ease-in-out infinite;
+        }
+
+        body::after {
+            content: '';
+            position: fixed;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg, transparent 30%, rgba(255, 255, 255, 0.1) 50%, transparent 70%);
+            pointer-events: none;
+            z-index: 999;
+            animation: moveGlare 8s linear infinite;
+        }
+
+        @keyframes moveGlare {
+            0% { transform: translateX(-100%) translateY(-100%) rotate(45deg); }
+            100% { transform: translateX(100%) translateY(100%) rotate(45deg); }
         }
 
         .card {
@@ -394,12 +429,46 @@
         noteEl.innerText = "Try pressing Yes 😌";
 
         const backgrounds = [
-            "linear-gradient(135deg,#ffdde1,#ee9ca7)",
-            "linear-gradient(135deg,#fbc2eb,#a6c1ee)",
-            "linear-gradient(135deg,#ff9a9e,#fad0c4)",
-            "linear-gradient(135deg,#2193b0,#6dd5ed)",
-            "linear-gradient(135deg,#42275a,#734b6d)",
-            "linear-gradient(135deg,#ff7e5f,#feb47b)"
+            // Pinks & Reds
+            "linear-gradient(135deg, #ffdde1, #ee9ca7)",
+            "linear-gradient(135deg, #fbc2eb, #a6c1ee)",
+            "linear-gradient(135deg, #ffecd2, #fcb69f)",
+            "linear-gradient(135deg, #fccb90, #d57eeb)",
+            "linear-gradient(135deg, #ff9a9e, #fad0c4)",
+            "linear-gradient(135deg, #ff758c, #ff7eb3)",
+            "linear-gradient(135deg, #ff6a88, #ff99ac)",
+            "linear-gradient(135deg, #f64f59, #c471ed)",
+            "linear-gradient(135deg, #ff416c, #ff4b2b)",
+            "linear-gradient(135deg, #ff9966, #ff5e62)",
+            "linear-gradient(135deg, #e53935, #e35d5b)",
+            "linear-gradient(135deg, #ff4e50, #f9d423)",
+            "linear-gradient(135deg, #bc4e9c, #f80759)",
+            "linear-gradient(135deg, #ff758c, #ffb3c1)",
+            "linear-gradient(135deg, #d38312, #a83279)",
+            "linear-gradient(135deg, #ff512f, #dd2476)",
+            "linear-gradient(135deg, #654ea3, #eaafc8)",
+            // Blues & Teals
+            "linear-gradient(135deg, #2193b0, #6dd5ed)",
+            "linear-gradient(135deg, #36d1dc, #5b86e5)",
+            "linear-gradient(135deg, #6a11cb, #2575fc)",
+            "linear-gradient(135deg, #8e44ad, #3498db)",
+            "linear-gradient(135deg, #2c3e50, #4ca1af)",
+            "linear-gradient(135deg, #1e3c72, #2a5298)",
+            "linear-gradient(135deg, #0f2027, #203a43, #2c5364)",
+            // Dark Purples & Mauves
+            "linear-gradient(135deg, #42275a, #734b6d)",
+            // Light & Warm
+            "linear-gradient(135deg, #f6d365, #fda085)",
+            "linear-gradient(135deg, #84fab0, #8fd3f4)",
+            "linear-gradient(135deg, #ee9ca7, #ffdde1)",
+            // Added new gradients
+            "linear-gradient(135deg, #ff7e5f, #feb47b)",
+            "linear-gradient(135deg, #6a3093, #a044ff)",
+            "linear-gradient(135deg, #0f0c29, #302b63, #24243e)",
+            "linear-gradient(135deg, #f00000, #dc281e)",
+            "linear-gradient(135deg, #3a1c71, #d76d77, #ffaf7b)",
+            "linear-gradient(135deg, #11998e, #38ef7d)",
+            "linear-gradient(135deg, #200122, #6f0000)"
         ];
 
         function setRandomBackground() {
@@ -650,8 +719,8 @@
             heart.style.left = Math.random() * window.innerWidth + "px";
             heart.style.top = window.innerHeight + "px";
             document.body.appendChild(heart);
-            setTimeout(() => heart.remove(), 3000);
-        }, 1000);
+            setTimeout(() => heart.remove(), 6000);
+        }, 800);
 
     </script>
 
